new css masonry grid

--- a/members.html
+++ b/members.html
@@ -3,8 +3,8 @@ layout: page
 title: Members
 ---
 
-<div class="row make-columns">
-	<div class="col-xs-6 col-md-4">
+<div class="card-columns">
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/jop.jpg" alt="Jun" style="width:100%">
 			<div class="container">
@@ -13,333 +13,333 @@ title: Members
 			<p style="text-align:right;">jop at_ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/se.jpg" alt="Sevcan" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sevcan Erşan</a></h4>
+			<h4 align="center"><a href="/images/ppl/se.jpg">Sevcan Erşan</a></h4>
 			<p class="title">Postdoctoral Researcher</p>
 			<p style="text-align:right;">sevcanersan at_ucla.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/ah.jpg" alt="Alon" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Alon Halfon</a></h4>
+			<h4 align="center"><a href="/images/ppl/ah.jpg">Alon Halfon</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">ahalf001 at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/al.jpg" alt="Aliya" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Aliya Lakhani</a></h4>
+			<h4 align="center"><a href="/images/ppl/al.jpg">Aliya Lakhani</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">aliyalakhani at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/rl.jpg" alt="Richard" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Richard Law</a></h4>
+			<h4 align="center"><a href="/images/ppl/rl.jpg">Richard Law</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">richardlaw at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/gn.jpg" alt="Glenn" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Glenn Nurwono</a></h4>
+			<h4 align="center"><a href="/images/ppl/gn.jpg">Glenn Nurwono</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">nurwono at_ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/so.png" alt="Samantha" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Samantha O'Keeffe</a></h4>
+			<h4 align="center"><a href="/images/ppl/so.png">Samantha O'Keeffe</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">samokeeffe at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/kp.png" alt="Keunseok" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Keunseok Park</a></h4>
+			<h4 align="center"><a href="/images/ppl/kp.png">Keunseok Park</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">kencab at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/lg.jpg" alt="Lilly" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Lilly Garcia</a></h4>
+			<h4 align="center"><a href="/images/ppl/lg.jpg">Lilly Garcia</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">lillygarcia at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/tl.jpg" alt="Tanya" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Tanya Lee</a></h4>
+			<h4 align="center"><a href="/images/ppl/tl.jpg">Tanya Lee</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">tanlee101 at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/emc.jpg" alt="Elle" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Elle McCue</a></h4>
+			<h4 align="center"><a href="/images/ppl/emc.jpg">Elle McCue</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">ellemccue at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/tn.jpg" alt="Tifany" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Tifany Nguyen</a></h4>
+			<h4 align="center"><a href="/images/ppl/tn.jpg">Tifany Nguyen</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">tnguyen01 at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/kr.jpg" alt="Kiersten" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kiersten Russ</a></h4>
+			<h4 align="center"><a href="/images/ppl/kr.jpg">Kiersten Russ</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kierstenruss at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
 </div>
 
 <hr />
 
 <h3>Alumni</h3>
-<div class="row make-columns">
-	<div class="col-xs-6 col-md-4">
+<div class="card-columns">
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jimmy Xu</a></h4>
+			<h4 align="center"><a href="/images/ppl/jx.jpg">Jimmy Xu</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">jxu11 at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/ta.jpg" alt="Tina" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Thikrayat Al-Attar</a></h4>
+			<h4 align="center"><a href="/images/ppl/ta.jpg">Thikrayat Al-Attar</a></h4>
 			<p class="title">Postdoctoral Scholar</p>
 			<p style="text-align:right;">tinaattar at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/bc.jpg" alt="Bill" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Bill Chuang</a></h4>
+			<h4 align="center"><a href="/images/ppl/bc.jpg">Bill Chuang</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">bill.chuang0624 at_ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/ld.jpg" alt="Lorin" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Lorin Danielsen</a></h4>
+			<h4 align="center"><a href="/images/ppl/ld.jpg">Lorin Danielsen</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">danielsenlorin at_gmail.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/sd.jpg" alt="Sean" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sean Dickson</a></h4>
+			<h4 align="center"><a href="/images/ppl/sd.jpg">Sean Dickson</a></h4>
 			<p class="title">Undergrad Researcher</p>
 			<p style="text-align:right;">sean0909 at_uw.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/ed.jpg" alt="Emily" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emily Dong</a></h4>
+			<h4 align="center"><a href="/images/ppl/ed.jpg">Emily Dong</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">emilydong001 at_gmail.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/fg.jpg" alt="Kiko" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Francisco Galang</a></h4>
+			<h4 align="center"><a href="/images/ppl/fg.jpg">Francisco Galang</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kixstrla1 at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/cg.jpg" alt="Cole" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Cole Gilbertson</a></h4>
+			<h4 align="center"><a href="/images/ppl/cg.jpg">Cole Gilbertson</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">colegilbertson1998 at_yahoo.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/kg.jpg" alt="Kanika" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kanika Gulia</a></h4>
+			<h4 align="center"><a href="/images/ppl/kg.jpg">Kanika Gulia</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kgulia at_ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/eh.jpg" alt="Emma" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Emma Hanson</a></h4>
+			<h4 align="center"><a href="/images/ppl/eh.jpg">Emma Hanson</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">emmahanson at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/sl.jpg" alt="SungGyung" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Sung Gyung Lee</a></h4>
+			<h4 align="center"><a href="/images/ppl/sl.jpg">Sung Gyung Lee</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">sunggyung.lee123 at_gmail.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/em.jpg" alt="Edward" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Edward Ma</a></h4>
+			<h4 align="center"><a href="/images/ppl/em.jpg">Edward Ma</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">edwardmalux at_gmail.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/km.jpg" alt="Kayli" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Kayli Masuda</a></h4>
+			<h4 align="center"><a href="/images/ppl/km.jpg">Kayli Masuda</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">kaylimasuda at_yahoo.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/mm.jpg" alt="Megan" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Megan McShane</a></h4>
+			<h4 align="center"><a href="/images/ppl/mm.jpg">Megan McShane</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">mbmcshane at_ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/ap.jpg" alt="Adriana" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Adriana Payan</a></h4>
+			<h4 align="center"><a href="/images/ppl/ap.jpg">Adriana Payan</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">aadrianapayann at_gmail.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/jp.jpg" alt="Jacob" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Jacob Prohroff</a></h4>
+			<h4 align="center"><a href="/images/ppl/jp.jpg">Jacob Prohroff</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">jacobprohroff at_gmail.com</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/jr.jpg" alt="Justine" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Justine Reblando</a></h4>
+			<h4 align="center"><a href="/images/ppl/jr.jpg">Justine Reblando</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">tinntine2 at_ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/dt.jpg" alt="Dylon" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Dylon Tjanaka</a></h4>
+			<h4 align="center"><a href="/images/ppl/dt.jpg">Dylon Tjanaka</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">dtjanaka at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/hw.jpg" alt="Hans" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Hans Wahono</a></h4>
+			<h4 align="center"><a href="/images/ppl/hw.jpg">Hans Wahono</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">hanssw at_g.ucla.edu</p>
 			</div>
 		</div>
-	</div>
-	<div class="col-xs-6 col-md-4">
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/cw.jpg" alt="Caleb" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="" onclick="trackOutboundLink(''); return false;">Caleb Watson</a></h4>
+			<h4 align="center"><a href="/images/ppl/cw.jpg">Caleb Watson</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">caleb.watson at_duke.edu</p>
 			</div>
 		</div>
-	</div>
+	<!-- </div> -->
 </div>
 
 
