--- a/photos.html
+++ b/photos.html
@@ -4,42 +4,47 @@ title: Photos
 ---
 
 <section>
-	<div class="container">
-		<div class="row make-columns">
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/fun/labor_day_sail_2022.jpg" alt="" />Labor Day Sail 2022</a></span>
+	<!-- <div class="container"> -->
+		<div class="card-columns">
+			<div class="card">
+			<!-- <div class="imageContainer"> -->
+				<span class="image fit"><a href="images/group/20221208_191012.jpg"><img src="images/group/20221208_191012.jpg" alt="" /><p class="title">Brentwood </br> December 2022</p></a></span>
+			<!-- </div> -->
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/20220610_124037.jpg" alt="" />Lab Celebration in Westwood Village, June 2022</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/fun/labor_day_sail_2022.jpg"><img src="images/fun/labor_day_sail_2022.jpg" alt="" /><p class="title">Labor Day Sail 2022</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/20220415_174441.jpg" alt="" />Post-lab cleanup, April 2022</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20220610_124037.jpg"><img src="images/group/20220610_124037.jpg" alt="" /><p class="title">Lab Celebration in Westwood Village </br> June 2022</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/20211122_152313.jpg" alt="" />Santa Monica, November 2021</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20220415_174441.jpg"><img src="images/group/20220415_174441.jpg" alt="" /><p class="title">Post-lab cleanup </br> April 2022</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/fun/october_sail_2021.jpg" alt="" />October Sail 2021</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20211122_152313.jpg"><img src="images/group/20211122_152313.jpg" alt="" /><p class="title">Santa Monica </br> November 2021</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/20210909_121609.jpg" alt="" />UCLA, September 2021</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/fun/october_sail_2021.jpg"><img src="images/fun/october_sail_2021.jpg" alt="" /><p class="title">October Sail 2021</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/fun/september_sail_2021.jpg" alt="" />September Sail 2021</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20210909_121609.jpg"><img src="images/group/20210909_121609.jpg" alt="" /><p class="title">UCLA </br> September 2021</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/20201211_174701.jpg" alt="" />UCLA "Brewin's", December 2020</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/fun/september_sail_2021.jpg"><img src="images/fun/september_sail_2021.jpg" alt="" /><p class="title">September Sail 2021</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/fun/january_sail_2020.jpg" alt="" />January Sail 2020</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20201211_174701.jpg"><img src="images/group/20201211_174701.jpg" alt="" /><p class="title">UCLA "Brewin's" </br> December 2020</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/2019 holiday dinner.jpg" alt="" />Century City, December 2019</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/fun/january_sail_2020.jpg"><img src="images/fun/january_sail_2020.jpg" alt="" /><p class="title">January Sail 2020</p></a></span>
 			</div>
-			<div class="col">
-				<span class="image fit"><a href=""><img src="images/group/2018 holiday dinner.jpg" alt="" />Santa Monica, December 2018</a></span>
+			<div class="card">
+				<span class="image fit"><a href="images/group/2019 holiday dinner.jpg"><img src="images/group/2019 holiday dinner.jpg" alt="" /><p class="title">Century City </br> December 2019</p></a></span>
 			</div>
-		</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/2018 holiday dinner.jpg"><img src="images/group/2018 holiday dinner.jpg" alt="" /><p class="title">Santa Monica </br> December 2018</p></a></span>
+			</div>
+		<!-- </div> -->
 	</div>
 <!--
 	<div class="box alt">
