--- a/biography.html
+++ b/biography.html
@@ -98,7 +98,7 @@ title: Biography
 		<h3>Contribution to Diversity</h3>
 		<ul class="ul1">
 		<li>Mentor, Summer Undergraduate Research Program (SURP), Samueli Research Scholars (SRS) Program, and Integrated and Interdisciplinary Undergraduate Research Program (i<sup>2</sup>URP) – <i>2020 - present</i></li>
-		<li>Mentor, Bruin-In-Genomics (B.I.G.) Summer Undergraduate Research Program (NSF and NIH) – <i>2020 - present</i></li>
+		<li>Mentor, Bruins-In-Genomics (B.I.G.) Summer Undergraduate Research Program (NSF and NIH) – <i>2020 - present</i></li>
 		<li>Faculty advisor, AIChE UCLA chapter – <i>2020 - present</i></li>
 		<li>Mentor, Integrated and Interdisciplinary Undergraduate Research Program (i<sup>2</sup>URP) – <i>2020 - 2022</i></li>
 		<li>Mentor, NSF-LSAMP (NSF-CAMP) – <i>2020 - 2021</i></li>
