--- a/members.html
+++ b/members.html
@@ -26,16 +26,6 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
-			<img src="/images/ppl/ah.jpg" alt="Alon" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="/images/ppl/ah.jpg">Alon Halfon</a></h4>
-			<p class="title">Graduate Student</p>
-			<p style="text-align:right;">ahalf001 at_g.ucla.edu</p>
-			</div>
-		</div>
-	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
-		<div class="card">
 			<img src="/images/ppl/al.jpg" alt="Aliya" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/al.jpg">Aliya Lakhani</a></h4>
@@ -96,6 +86,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/aml.jpg" alt="Alina" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/aml.jpg">Alina Lambacher</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">aml21 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/tl.jpg" alt="Tanya" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/tl.jpg">Tanya Lee</a></h4>
@@ -140,6 +140,16 @@ title: Members
 
 <h3>Alumni</h3>
 <div class="card-columns">
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/ah.jpg" alt="Alon" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/ah.jpg">Alon Halfon</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">ahalf001 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
 			<img src="/images/ppl/jx.jpg" alt="Jimmy" style="width:100%">
