add open positions

--- a/members.html
+++ b/members.html
@@ -134,6 +134,24 @@ title: Members
 			</div>
 		</div>
 	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/mc.jpg" alt="Marie" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="contact">Join Us!</a></h4>
+			<p class="title">Postdocs & PhD Students</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/ae.jpg" alt="Albert" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="contact">Join Us!</a></h4>
+			<p class="title">Postdocs & PhD Students</p>
+			</div>
+		</div>
+	<!-- </div> -->
 </div>
 
 <hr />
