--- a/members.html
+++ b/members.html
@@ -86,6 +86,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/nh.jpg" alt="Nikolai" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/nh.jpg">Nikolai Haines</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">nhaines2 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/aml.jpg" alt="Alina" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/aml.jpg">Alina Lambacher</a></h4>
