--- a/members.html
+++ b/members.html
@@ -96,6 +96,26 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/eh.jpg" alt="Eddie" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/eh.jpg">Eddie Hu</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">eddiehukong at_gmail.com</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/rk.png" alt="Rachel" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/rk.png">Rachel Ki</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">rachelki at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/aml.jpg" alt="Alina" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/aml.jpg">Alina Lambacher</a></h4>
@@ -121,16 +141,6 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/emc.jpg">Elle McCue</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">ellemccue at_g.ucla.edu</p>
-			</div>
-		</div>
-	<!-- </div> -->
-	<!-- <div class="col-xs-6 col-md-4"> -->
-		<div class="card">
-			<img src="/images/ppl/tn.jpg" alt="Tifany" style="width:100%">
-			<div class="container">
-			<h4 align="center"><a href="/images/ppl/tn.jpg">Tifany Nguyen</a></h4>
-			<p class="title">Undergrad Student</p>
-			<p style="text-align:right;">tnguyen01 at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
@@ -270,9 +280,9 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
-			<img src="/images/ppl/eh.jpg" alt="Emma" style="width:100%">
+			<img src="/images/ppl/eh_.jpg" alt="Emma" style="width:100%">
 			<div class="container">
-			<h4 align="center"><a href="/images/ppl/eh.jpg">Emma Hanson</a></h4>
+			<h4 align="center"><a href="/images/ppl/eh_.jpg">Emma Hanson</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">emmahanson at_g.ucla.edu</p>
 			</div>
@@ -315,6 +325,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/mm.jpg">Megan McShane</a></h4>
 			<p class="title">Undergrad Student</p>
 			<p style="text-align:right;">mbmcshane at_ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/tn.jpg" alt="Tifany" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/tn.jpg">Tifany Nguyen</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">tnguyen01 at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
