--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,8 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
+<li>Lakhani, A., Chen, X., Chen, L. C., Khericha, Chen, Y. Y., Park, J. O.  <a href="https://doi.org/10.1101/2023.04.03.533021">Extracellular domains of CAR reprogram T-cell metabolism without antigen stimulation.</a> <i>bioRxiv</i> (2023) doi: 10.1101/2023.04.03.533021</li>
+<li>Perez-Ramirez, C., Nakano, H., Law, R. C., Matulionis, N., Thompson, J., Pfeiffer, A., Park, J. O., Nakano, A., Christofk, H. R.   <a href="https://doi.org/10.1101/2023.03.16.532852">Atlas of fetal metabolism during mid-to-late gestation and diabetic pregnancy.</a> <i>bioRxiv</i> (2023) doi: 10.1101/2023.03.16.532852</li>
 <li>Park, J., Park, J. O., Choi, J., Kwon, T. T.  <a href="https://doi.org/10.1016/j.iot.2022.100646">D-SCAN: Toward collaborative multi-radio coexistence in mobile devices via deep learning.</a> <i>Internet of Things</i> 21,100646 (2023) doi: 10.1016/j.iot.2022.100646</li>
 <li>Guan, X., Erşan, S., Hu, X., Atallah, T. L., Xie, Y., Lu, S., Cao, B., Sun, J., Wu, K., Huang, Y., Duan, X., Caram, J. R., Yu, Y., Park, J. O., Liu, C.  <a href="https://doi.org/10.1038/s41929-022-00867-3">Maximizing light-driven CO<sub>2</sub> and N<sub>2</sub> fixation efficiency in quantum dot–bacteria hybrids.</a> <i>Nature Catalysis</i> 5,1019-1029 (2022) doi: 10.1038/s41929-022-00867-3</li>
 <li>Law, R. C., Nurwono, G., Park, J. O.  <a href="https://doi.org/10.1101/2022.08.19.504590">A parallel glycolysis supports rapid adaptation in dynamic environments.</a> <i>bioRxiv</i> (2022) doi: 10.1101/2022.08.19.504590</li>
