--- a/biography.html
+++ b/biography.html
@@ -98,9 +98,9 @@ title: Biography
 		<h3>Contribution to Diversity</h3>
 		<ul class="ul1">
 		<li>Mentor, Summer Undergraduate Research Program (SURP), Samueli Research Scholars (SRS) Program, and Integrated and Interdisciplinary Undergraduate Research Program (i<sup>2</sup>URP) – <i>2020 - present</i></li>
-		<li>Mentor, Bruins-In-Genomics (B.I.G.) Summer Undergraduate Research Program (NSF and NIH) – <i>2020 - present</i></li>
 		<li>Faculty advisor, AIChE UCLA chapter – <i>2020 - present</i></li>
 		<li>Mentor, Integrated and Interdisciplinary Undergraduate Research Program (i<sup>2</sup>URP) – <i>2020 - 2022</i></li>
+		<li>Mentor, Bruins-In-Genomics (B.I.G.) Summer Undergraduate Research Program (NSF and NIH) – <i>2020 - 2021</i></li>
 		<li>Mentor, NSF-LSAMP (NSF-CAMP) – <i>2020 - 2021</i></li>
 		<li>CityLab at UCLA – <i>2019</i></li>
 		<li>Engineering FT<sup>2</sup> (Faculty Teaching Faculty about Teaching) – <i>2018</i></li>
@@ -128,6 +128,8 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>Uncovering Metabolic Design Principles and Engineering Strategies via Metabolomics. <i>Keck School of Medicine of USC, 4/12/2023</i></li>
+		<li>From Basic Design Principles to Metabolic Engineering: Rewiring Central Carbon Metabolism for CO<sub>2</sub> Conversion. <i>Synthetic Biology Young Speaker Series (SynBYSS), 3/30/2023</i></li>
 		<li>From Basic Design Principles to Metabolic Engineering: Rewiring Central Carbon Metabolism for CO<sub>2</sub> Conversion. <i>Stevens Institute of Technology, 9/30/2022</i></li>
 		<li>Elucidating Glycolytic Flux Control using Metabolomics and Isotope Tracers. <i>UCLA-Caltech Medical Scientist Training Program (MSTP), 2/8/2021</i></li>
 		<li>Integrating kinetics, thermodynamics, and metabolomics. <i>Korea Institute for Advanced Study (KIAS) in Seoul, South Korea, 4/30/2019</i></li>
