--- a/members.html
+++ b/members.html
@@ -166,6 +166,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/hs.jpg" alt="Harin" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/hs.jpg">Lynn Harin Sim</a></h4>
+			<p class="title">Undergrad Student</p>
+			<p style="text-align:right;">harinsim at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/mc.jpg" alt="Marie" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="contact">Join Us!</a></h4>
