--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,12 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20230504_135623.jpg"><img src="images/group/20230504_135623.jpg" alt="" /><p class="title">Hot Pot in Century City </br> May 2023</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20230502_151055.jpg"><img src="images/group/20230502_151055.jpg" alt="" /><p class="title">Aliya @ JCCC Retreat </br> May 2023</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20221208_191009.jpg"><img src="images/group/20221208_191009.jpg" alt="" /><p class="title">Brentwood </br> December 2022</p></a></span>
 			</div>
 			<div class="card">
