--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
+<li>Bailleul, J., Ruan, Y., Abdulrahman, L., Scott, A. J., Yazal, T., Sung, D., Park, K., Hoang, H., Nathaniel, J., Chu, F., Palomera, D., Sehgal, A., Tsang, J. E., Nathanson, D. A., Xu, S., Park, J. O., ten Hoeve, J., Bhat, K., Qi, N., Kornblum, H. I., Schaue, D., McBride, W. H., Lyssiotis, C. A., Wahl, D. R., Vlashi, E.  <a href="https://doi.org/10.1093/neuonc/noad103">PKM2 rewires glucose metabolism during radiation therapy to promote an antioxidant response and glioblastoma radioresistance.</a> <i>Neuro-Oncology</i> (2023) doi: 10.1093/neuonc/noad103</li>
 <li>Lakhani, A., Chen, X., Chen, L. C., Khericha, M., Chen, Y. Y., Park, J. O.  <a href="https://doi.org/10.1101/2023.04.03.533021">Extracellular domains of CAR reprogram T-cell metabolism without antigen stimulation.</a> <i>bioRxiv</i> (2023) doi: 10.1101/2023.04.03.533021</li>
 <li>Perez-Ramirez, C., Nakano, H., Law, R. C., Matulionis, N., Thompson, J., Pfeiffer, A., Park, J. O., Nakano, A., Christofk, H. R.   <a href="https://doi.org/10.1101/2023.03.16.532852">Atlas of fetal metabolism during mid-to-late gestation and diabetic pregnancy.</a> <i>bioRxiv</i> (2023) doi: 10.1101/2023.03.16.532852</li>
 <li>Park, J., Park, J. O., Choi, J., Kwon, T. T.  <a href="https://doi.org/10.1016/j.iot.2022.100646">D-SCAN: Toward collaborative multi-radio coexistence in mobile devices via deep learning.</a> <i>Internet of Things</i> 21,100646 (2023) doi: 10.1016/j.iot.2022.100646</li>
