--- a/photos.html
+++ b/photos.html
@@ -7,6 +7,24 @@ title: Photos
 	<!-- <div class="container"> -->
 		<div class="card-columns">
 			<div class="card">
+				<span class="image fit"><a href="images/group/20230611_221226.jpg"><img src="images/group/20230611_221226.jpg" alt="" /><p class="title">Lab @ Marina Bay Sands </br> June 2023</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20230611_220815.jpg"><img src="images/group/20230611_220815.jpg" alt="" /><p class="title">Lab @ Marina Bay Sands </br> June 2023</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20230612_141742.jpg"><img src="images/group/20230612_141742.jpg" alt="" /><p class="title">Aliya @ ME15 Singapore </br> June 2023</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20230612_141958.jpg"><img src="images/group/20230612_141958.jpg" alt="" /><p class="title">Richard @ ME15 Singapore </br> June 2023</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20230612_142042.jpg"><img src="images/group/20230612_142042.jpg" alt="" /><p class="title">Samantha @ ME15 Singapore </br> June 2023</p></a></span>
+			</div>
+			<div class="card">
+				<span class="image fit"><a href="images/group/20230612_141651.jpg"><img src="images/group/20230612_141651.jpg" alt="" /><p class="title">Glenn @ ME15 Singapore </br> June 2023</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20230504_135623.jpg"><img src="images/group/20230504_135623.jpg" alt="" /><p class="title">Hot Pot in Century City </br> May 2023</p></a></span>
 			</div>
 			<div class="card">
