add supplementary data file

--- a/resources.html
+++ b/resources.html
@@ -15,3 +15,6 @@ title: Resources
 
 <p><a href="https://samueli.ucla.edu"><span class="image left"><img src="images/logos/Samueli.png" alt="" /></span><br><font size="+3">Engineering</font></a></p>
 <br><br><br><br>
+
+<p><a href="data/cobiot-database.xlsx"><span class="image left"><img src="images/logos/cobiot.jpg" alt="" /></span><br><font size="+3">Supplementary Data for "Sustainable Metabolic Engineering Requires a Perfect Trifecta"</font></a></p>
+<br><br><br><br>
