update bio and photos

--- a/photos.html
+++ b/photos.html
@@ -13,6 +13,9 @@ title: Photos
 				<span class="image fit"><a href="images/group/20230611_220815.jpg"><img src="images/group/20230611_220815.jpg" alt="" /><p class="title">Lab @ Marina Bay Sands </br> June 2023</p></a></span>
 			</div>
 			<div class="card">
+				<span class="image fit"><a href="images/group/20230702_150700_0002.jpg"><img src="images/group/20230702_150700_0002.jpg" alt="" /><p class="title">Lab @ Gardens by the Bay </br> June 2023</p></a></span>
+			</div>
+			<div class="card">
 				<span class="image fit"><a href="images/group/20230612_141742.jpg"><img src="images/group/20230612_141742.jpg" alt="" /><p class="title">Aliya @ ME15 Singapore </br> June 2023</p></a></span>
 			</div>
 			<div class="card">
