--- a/biography.html
+++ b/biography.html
@@ -128,6 +128,7 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>Metabolomics-Guided Discovery of Metabolic Design Principles and Engineering Strategies. <i>Metabolic Engineering 15 (ME15), Singapore, 6/11/2023</i></li>
 		<li>Uncovering Metabolic Design Principles and Engineering Strategies via Metabolomics. <i>Keck School of Medicine of USC, 4/12/2023</i></li>
 		<li>From Basic Design Principles to Metabolic Engineering: Rewiring Central Carbon Metabolism for CO<sub>2</sub> Conversion. <i>Synthetic Biology Young Speaker Series (SynBYSS), 3/30/2023</i></li>
 		<li>From Basic Design Principles to Metabolic Engineering: Rewiring Central Carbon Metabolism for CO<sub>2</sub> Conversion. <i>Stevens Institute of Technology, 9/30/2022</i></li>
