--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
+<li>Park, J. O., Nielsen, D. R.  <a href="https://authors.elsevier.com/a/1hs6I3PtAV5BrF">Editorial overview: Energy biotechnology as an integral solution to global challenges.</a> <i>Current Opinion in Biotechnology</i> 84,103006 (2023) doi: 10.1016/j.copbio.2023.103006</li>
 <li>Nurwono, G., O’Keeffe, S., Liu, N., Park, J. O.  <a href="https://www.sciencedirect.com/science/article/pii/S0958166923000939">Sustainable metabolic engineering requires a perfect trifecta.</a> <i>Current Opinion in Biotechnology</i> 83,102983 (2023) doi: 10.1016/j.copbio.2023.102983</li>
 <li>Law, R. C., Nurwono, G., Park, J. O.  <a href="https://doi.org/10.1038/s41589-023-01395-2">A parallel glycolysis provides a selective advantage through rapid growth acceleration.</a> <i>Nature Chemical Biology</i> (2023) doi: 10.1038/s41589-023-01395-2</li>
 <li>Bailleul, J., Ruan, Y., Abdulrahman, L., Scott, A. J., Yazal, T., Sung, D., Park, K., Hoang, H., Nathaniel, J., Chu, F., Palomera, D., Sehgal, A., Tsang, J. E., Nathanson, D. A., Xu, S., Park, J. O., ten Hoeve, J., Bhat, K., Qi, N., Kornblum, H. I., Schaue, D., McBride, W. H., Lyssiotis, C. A., Wahl, D. R., Vlashi, E.  <a href="https://doi.org/10.1093/neuonc/noad103">M2 isoform of pyruvate kinase rewires glucose metabolism during radiation therapy to promote an antioxidant response and glioblastoma radioresistance.</a> <i>Neuro-Oncology</i> (2023) doi: 10.1093/neuonc/noad103</li>
