--- a/publications.html
+++ b/publications.html
@@ -4,6 +4,7 @@ title: Publications
 ---
 
 <ol reversed class="ul2">
+<li>Xie, Y., Erşan, S., Guan, X., Wang, J., Sha, J., Xu, S., Wohlschlegel, J. A., Park, J. O., Liu, C.  <a href="https://doi.org/10.1073/pnas.2308373120">Unexpected metabolic rewiring of CO<sub>2</sub> fixation in H<sub>2</sub>-mediated materials–biology hybrids.</a> <i>Proceedings of the National Academy of Sciences</i> 120(42),e2308373120 (2023) doi: 10.1073/pnas.2308373120</li>
 <li>Park, J. O., Nielsen, D. R.  <a href="https://authors.elsevier.com/a/1hs6I3PtAV5BrF">Editorial overview: Energy biotechnology as an integral solution to global challenges.</a> <i>Current Opinion in Biotechnology</i> 84,103006 (2023) doi: 10.1016/j.copbio.2023.103006</li>
 <li>Nurwono, G., O’Keeffe, S., Liu, N., Park, J. O.  <a href="https://www.sciencedirect.com/science/article/pii/S0958166923000939">Sustainable metabolic engineering requires a perfect trifecta.</a> <i>Current Opinion in Biotechnology</i> 83,102983 (2023) doi: 10.1016/j.copbio.2023.102983</li>
 <li>Law, R. C., Nurwono, G., Park, J. O.  <a href="https://doi.org/10.1038/s41589-023-01395-2">A parallel glycolysis provides a selective advantage through rapid growth acceleration.</a> <i>Nature Chemical Biology</i> (2023) doi: 10.1038/s41589-023-01395-2</li>
