--- a/members.html
+++ b/members.html
@@ -36,6 +36,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/if.jpg" alt="Isabelle" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/if.jpg">Isabelle Fischer</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">ifisc01 at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/al.jpg" alt="Aliya" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/al.jpg">Aliya Lakhani</a></h4>
@@ -71,6 +81,16 @@ title: Members
 			<h4 align="center"><a href="/images/ppl/so.png">Samantha O'Keeffe</a></h4>
 			<p class="title">Graduate Student</p>
 			<p style="text-align:right;">samokeeffe at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
+			<img src="/images/ppl/kp.jpg" alt="Kartikeya" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/kp.jpg">Kartikeya Pande</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">kpande at_g.ucla.edu</p>
 			</div>
 		</div>
 	<!-- </div> -->
