--- a/members.html
+++ b/members.html
@@ -46,6 +46,16 @@ title: Members
 	<!-- </div> -->
 	<!-- <div class="col-xs-6 col-md-4"> -->
 		<div class="card">
+			<img src="/images/ppl/dl.jpg" alt="Dexter" style="width:100%">
+			<div class="container">
+			<h4 align="center"><a href="/images/ppl/dl.jpg">Dexter Lai</a></h4>
+			<p class="title">Graduate Student</p>
+			<p style="text-align:right;">dexterlai at_g.ucla.edu</p>
+			</div>
+		</div>
+	<!-- </div> -->
+	<!-- <div class="col-xs-6 col-md-4"> -->
+		<div class="card">
 			<img src="/images/ppl/al.jpg" alt="Aliya" style="width:100%">
 			<div class="container">
 			<h4 align="center"><a href="/images/ppl/al.jpg">Aliya Lakhani</a></h4>
