update pubs and talks

--- a/biography.html
+++ b/biography.html
@@ -129,6 +129,8 @@ title: Biography
 		<p>
 		<h3>Presentations</h3>
 		<ul class="ul1">
+		<li>2023 AIChE Annual Meeting. <i>Orlando, FL, 11/8/2023</i></li>
+		<li>Metabolomics, Metabolic Engineering, and Carbon Upcycling. <i>U.S.- Korea Synthetic Biology Conference, Lawrence Berkeley National Laboratory, Emeryville, CA, 11/3/2023</i></li>
 		<li>Metabolomics-Guided Discovery of Metabolic Design Principles and Engineering Strategies. <i>MB 610 Advanced Topics of Bioethics, Bioinformatics, and Molecular Biology, San Diego State University, 10/25/23</i></li>
 		<li>Metabolomics-Guided Discovery of Metabolic Design Principles and Engineering Strategies. <i>Metabolic Engineering 15 (ME15), Singapore, 6/11/2023</i></li>
 		<li>Uncovering Metabolic Design Principles and Engineering Strategies via Metabolomics. <i>Keck School of Medicine of USC, 4/12/2023</i></li>
@@ -155,12 +157,12 @@ title: Biography
 		<li>Park, J. O., Xu, Y. F., Rabinowitz, J. D.  Integration of carbon, nitrogen, and oxygen metabolism in Escherichia coli. <i>International Conference and Exhibition on Metabolomics & Systems Biology, 2012</i></li>
 		<li>Park, J. O., Arya G.  Facilitated Diffusion of Transcription Factors in Search of DNA Target Sites. <i>Calit2 Summer Scholars Poster Session at UCSD, 2009</i></li>
 		<li>Park, J. O., Schellenberger J., Conrad, T. M., Palsson, B. Ø.  BiGG: Biochemical, Genetic and Genomic Database. <i>Calit2 Summer Scholars Poster Session at UCSD, 2008</i></li>
-		<li>Metabolic Engineering Guest Lecture, <i>CBE 447, 04/2015</i></li>
-		<li>Princeton Chemical Biology Meeting <i>04/2015, 06/2013</i></li>
-		<li>Princeton E-ffiliates Partnership Retreat <i>02/2015</i></li>
-		<li>Princeton Prokaryotes Meeting <i>03/2016, 11/2015, 10/2014, 05/2014, 10/2013, 11/2012</i></li>
-		<li>Princeton BioEngineering Colloquium <i>03/2014</i></li>
-		<li>Graduate Student Symposium <i>10/2013, 10/2012</i></li>
+		<li>Metabolic Engineering Guest Lecture. <i>CBE 447, 04/2015</i></li>
+		<li>Princeton Chemical Biology Meeting. <i>04/2015, 06/2013</i></li>
+		<li>Princeton E-ffiliates Partnership Retreat. <i>02/2015</i></li>
+		<li>Princeton Prokaryotes Meeting. <i>03/2016, 11/2015, 10/2014, 05/2014, 10/2013, 11/2012</i></li>
+		<li>Princeton BioEngineering Colloquium. <i>03/2014</i></li>
+		<li>Graduate Student Symposium. <i>10/2013, 10/2012</i></li>
 		</ul>
 		</p>
 
